--- a/src/app.scss
+++ b/src/app.scss
@@ -1,14 +1,4 @@
-@use "@material/icon-button";
-@use "@material/top-app-bar/mdc-top-app-bar";
-
-@include icon-button.core-styles;
-
-@font-face {
-  font-family: 'Langar';
-  src: url('./res/Langar-Regular.ttf') format('truetype');
-  font-weight: 400;
-  font-style: normal;
-}
+@import "_common.scss";
 
 body {
   color: blue;
