--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,9 @@
 @import "_common.scss";
 
 body {
-  color: blue;
+  //color: $mdc-theme-secondary;
   font-family: 'Langar';
+  //background-color: $mdc-theme-primary;
 }
 
 // .container {
