--- a/src/app.scss
+++ b/src/app.scss
@@ -3,7 +3,7 @@
 body {
   //color: $mdc-theme-secondary;
   font-family: 'Langar';
-  //background-color: $mdc-theme-primary;
+  //background-color: $surface;
 }
 
 // .container {
