--- a/src/_material.scss
+++ b/src/_material.scss
@@ -13,9 +13,9 @@
 );
 
 @use "@material/icon-button";
-@use "@material/top-app-bar/mdc-top-app-bar";
 @use "@material/button";
 @use "@material/card";
+@import "@material/top-app-bar/mdc-top-app-bar";
 
 @include icon-button.core-styles;
 @include button.core-styles;
