--- a/src/app.scss
+++ b/src/app.scss
@@ -1,25 +1,62 @@
 @import "_material.scss";
 
 @font-face {
-  font-family: 'Langar';
-  src: url('./res/Langar-Regular.ttf') format('truetype');
+  font-family: "Langar";
+  src: url("./res/Langar-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 body {
   @extend .mdc-theme--secondary-bg;
-  font-family: 'Langar';
+  font-family: "Langar";
+  display: grid;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  margin: 0 1rem 0 1rem;
+  font-size: 1rem;
 }
 
-// .container {
-//   display: grid;
-//   grid-template-rows: auto 2rem 1fr 2rem;
-//   grid-template-areas:
-//     "header"
-//     "search"
-//     "body"
-//     "footer";
-//   height: 100vh;
-// }
+.mdc-top-app-bar {
+  @include mdc-top-app-bar-ink-color(#ffffff);
+  @include mdc-top-app-bar-icon-ink-color(#ffffff);
+  @include mdc-top-app-bar-fill-color(#2A2931);
+  //@use ink-color(red);
+  //@include top-app-bar.mdc-top-app-bar.fill-color(blue);
+  //grid-area: header;
+  margin-left: -1rem;
+  padding-top: 0;
+  //background-color: var(--mdc-theme-secondary);
+}
 
+//Root font size 16px
+
+//Really small phones
+//@media (max-width: 40rem) {
+@media (max-width: 640px) {
+  body {
+    grid-template-columns: [hd-start] repeat(2, [col-start] 1fr [col-end]) [hd-end];
+    grid-template-areas: "header header";
+  }
+}
+
+//Regular pixels, iphones
+//Most users
+//@media (min-width: 41rem) and (max-width: 60rem) {
+@media (min-width: 640px) and (max-width: 1024px) {
+  body {
+    grid-template-columns: [hd-start] repeat(4, [col-start] 1fr [col-end]) [hd-end];
+    grid-template-areas: "header header header header";
+  }
+}
+
+//tablets and the rest
+//@media (min-width: 61rem) {
+@media (min-width: 1024px) {
+  body {
+    grid-template-columns: [hd-start] repeat(8, [col-start] 1fr [col-end]) [hd-end];
+  }
+  .mdc-top-app-bar {
+    display: none;
+  }
+}
