--- a/src/partials/top-bar.html
+++ b/src/partials/top-bar.html
@@ -1,4 +1,4 @@
-<header class="mdc-top-app-bar">
+<header class="mdc-top-app-bar mdc-top-app-bar--fixed mdc-top-app-bar--dense mdc-top-app-bar--dense-fixed-adjust">
     <div class="mdc-top-app-bar__row">
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
             <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"
