--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
 @import "_material.scss";
+@import "@material/theme";
 
 @font-face {
   font-family: "Langar";
@@ -8,25 +9,19 @@
 }
 
 body {
-  @extend .mdc-theme--secondary-bg;
   font-family: "Langar";
   display: grid;
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
   margin: 0 1rem 0 1rem;
   font-size: 1rem;
+  background-color: $primary;
+  color: $on-primary;
 }
 
 .mdc-top-app-bar {
-  @include mdc-top-app-bar-ink-color(#ffffff);
-  @include mdc-top-app-bar-icon-ink-color(#ffffff);
-  @include mdc-top-app-bar-fill-color(#2A2931);
-  //@use ink-color(red);
-  //@include top-app-bar.mdc-top-app-bar.fill-color(blue);
-  //grid-area: header;
   margin-left: -1rem;
   padding-top: 0;
-  //background-color: var(--mdc-theme-secondary);
 }
 
 //Root font size 16px
