colors and positions with card

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,10 +1,31 @@
 //Colors using material color tool
 $blue-gray-700-dark: #1c313a;
+$blue-gray-700: #455a64;
+$blue-gray-600-dark: #29434e;
 $blue-gray-400-dark: #4b636e;
+$gray-400-dark: #8d8d8d;
 $blue-gray-900-dark: #000a12;
+$blue-gray-900: #263238;
+$gray-900: #212121;
+$blue-gray-800-dark: #102027;
+$gray-800-dark: #1b1b1b;
 
 
 
-$primary: $blue-gray-700-dark; 
-$secondary: $blue-gray-400-dark;
-$background: $blue-gray-900-dark;
+$primary: $gray-800-dark; 
+$secondary: $gray-400-dark;
+$background: $gray-900;
+$surface: lighten($background, 7%);
+
+/* elevation from material
+00dp	0%
+01dp	5%
+02dp	7%
+03dp	8%
+04dp	9%
+06dp	11%
+08dp	12%
+12dp	14%
+16dp	15%
+24dp	16%
+*/
