--- a/src/app.scss
+++ b/src/app.scss
@@ -10,17 +10,19 @@
 
 body {
   font-family: "Langar";
+  font-size: 1rem;
+  background-color: $background;
+  color: $on-primary;
+}
+
+.container {
   display: grid;
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
   margin: 0 1rem 0 1rem;
-  font-size: 1rem;
-  background-color: $primary;
-  color: $on-primary;
 }
 
 .mdc-top-app-bar {
-  margin-left: -1rem;
   padding-top: 0;
 }
 
@@ -29,7 +31,8 @@ body {
 //Really small phones
 //@media (max-width: 40rem) {
 @media (max-width: 640px) {
-  body {
+  .container {
+    padding-top: 50px; //avoid top-app-bar
     grid-template-columns: [hd-start] repeat(2, [col-start] 1fr [col-end]) [hd-end];
     grid-template-areas: "header header";
   }
@@ -39,7 +42,8 @@ body {
 //Most users
 //@media (min-width: 41rem) and (max-width: 60rem) {
 @media (min-width: 640px) and (max-width: 1024px) {
-  body {
+  .container {
+    padding-top: 50px; //avoid top-app-bar
     grid-template-columns: [hd-start] repeat(4, [col-start] 1fr [col-end]) [hd-end];
     grid-template-areas: "header header header header";
   }
@@ -48,7 +52,7 @@ body {
 //tablets and the rest
 //@media (min-width: 61rem) {
 @media (min-width: 1024px) {
-  body {
+  .container {
     grid-template-columns: [hd-start] repeat(8, [col-start] 1fr [col-end]) [hd-end];
   }
   .mdc-top-app-bar {
